syntax = "proto3";

package features;

import "geometry.proto";

option go_package = "diagonal.works/diagonal/proto";

message TagProto {
    string key = 1;
    string value = 2;
}

enum FeatureType {
    FeatureTypePoint = 0;
    FeatureTypePath = 1;
    FeatureTypeArea = 2;
    FeatureTypeRelation = 3;
}

message FeatureIDProto {
    FeatureType type = 1;
    string namespace = 2;
    uint64 value = 3;
}

message PointFeatureProto {
    FeatureIDProto id = 1;
    repeated TagProto tags = 2;
    geometry.PointProto point = 3;
}

message PathFeatureProto {
    FeatureIDProto id = 1;
    repeated TagProto tags = 2;
    repeated PointFeatureProto features = 3;
    double lengthMeters = 4;
}

message PathFeaturesProto {
    repeated PathFeatureProto paths = 1;
}

message AreaFeatureProto {
    FeatureIDProto id = 1;
    repeated TagProto tags = 2;
    repeated PathFeaturesProto features = 3;
}

message RelationMemberProto {
    FeatureIDProto id = 1;
    string role = 3;
}

message RelationFeatureProto {
    FeatureIDProto id = 1;
    repeated TagProto tags = 2;
    repeated RelationMemberProto members = 3;
}

message FeatureProto {
    oneof feature {
        PointFeatureProto point = 1;
        PathFeatureProto path = 2;
        AreaFeatureProto area = 3;
        RelationFeatureProto relation = 4;
    }
}