syntax = "proto3";

package geometry;

option go_package = "diagonal.works/b6/proto";

message PolylineProto {
    repeated PointProto points = 1;
    double length_meters = 2;
}

message MultiPolygonProto {
    repeated PolygonProto polygons = 1;
}

message PolygonProto {
    // All loops are ordered counter-clockwise, and a point is defined to be
    // inside the polygon if it's enclosed by an odd number of loops.
    repeated LoopProto loops = 1;
}

message LoopProto {
    repeated PointProto points = 1;
}

message PointProto {
    int32 lat_e7 = 1;
    int32 lng_e7 = 2;
}

